--- a/Client/Pages/GamePlayer.razor
+++ b/Client/Pages/GamePlayer.razor
@@ -35,7 +35,34 @@
 
     <div class="row game-community-cards-parent-cls">
         <div class="column game-community-cards-child-cls mat-elevation-z5">
-            <img class="game-community-card-img-cls" src="@ViewModel.GamePlayerCardImageUrl()"/>
+            <MatCard class="demo-mat-card">
+            <div class="demo-mat-card-content">
+                <MatHeadline6 class="demo-mat-card-clean-margin">
+                    Our Changing Planet
+                </MatHeadline6>
+                <MatSubtitle2 class="demo-mat-card-clean-margin">
+                    by Kurt Wagner
+                </MatSubtitle2>
+            </div>
+            <MatCardContent>
+                <MatCardMedia Wide="true" ImageUrl="https://material-components.github.io/material-components-web-catalog/static/media/photos/3x2/2.jpg"></MatCardMedia>
+                <MatBody2 class="demo-mat-card-content demo-mat-card-clean-margin">
+                    Visit ten places on our planet that are undergoing the biggest changes today.
+                </MatBody2>
+            </MatCardContent>
+            <MatCardActions>
+                <MatCardActionButtons>
+                    <MatButton>Read</MatButton>
+                    <MatButton>Bookmark</MatButton>
+                </MatCardActionButtons>
+ 
+                <MatCardActionIcons>
+                    <MatIconButton Icon="@MatIconNames.Favorite"></MatIconButton>
+                    <MatIconButton Icon="@MatIconNames.Dashboard"></MatIconButton>
+                </MatCardActionIcons>
+            </MatCardActions>
+            </MatCard>
+            @* <img class="game-community-card-img-cls" src="@ViewModel.GamePlayerCardImageUrl()"/> *@
         </div>
         @for (var i = 0; i < ViewModel.JoinGameResponse.Game.NumberOfRounds; ++i)
         {
